--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,27 @@
+os:
+  - linux
+  - osx
+
+addons:
+  apt:
+    packages:
+      - tree
+  homebrew:
+    packages:
+      - tree
+    update: true
+
+# Only clone the most recent commit.
+git:
+  depth: 1
+
 language: go
 
+env:
+  - GO111MODULE=on
+
 go:
-  - 1.12.5
+  - "1.12"
 
 sudo: required
 
@@ -10,3 +30,6 @@ install:
 
 script:
   - echo "script"
+
+notifications:
+  email: false
