add version cmd

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,6 +3,7 @@
 builds:
 - env:
   - CGO_ENABLED=0
+  ldflags: -s -X github.com/sunny0826/hamal/cmd.hamalVersion={{.Version}} -X github.com/sunny0826/hamal/cmd.gitCommit={{.Commit}} -X github.com/sunny0826/hamal/cmd.buildDate={{.Date}}
 archives:
 - replacements:
     darwin: Darwin
@@ -13,7 +14,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ .Tag }}-rc"
 changelog:
   sort: asc
   filters:
