--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,13 @@ install:
 script:
   - echo "script"
 
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: curl -sL https://git.io/goreleaser | bash
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = linux
+
 notifications:
   email: false
